# llm

./: .gitignore  README.md  inference.py  pyproject.toml  requirements-benchmark.txt  requirements-dev.txt  requirements.txt  train.py
.github/: pull_request_template.md
.github/workflows/: benchmark.yml  ci.yml  codeql.yml
benchmark/: benchmark_training.py  python_benchmark.py
benchmarks/: __init__.py  benchmark.py
data/: data_set.py
engine/: engine.c  export_weights.py  fineweb_dataset.py  inference.py  main.py
engine/data/: data_set.py
engine/fine-tune/: chat.py  data-set.py  main.py
engine/logs/: chat.txt  run_20260504_143730.txt
src/directml/: inference.py  main.py
src/large_gpu/: main.py
tokenizer/: __init__.py  bpe.py  tokenizer.json
